<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <!--buttons at the bottom of the screen-->
    <LinearLayout
        android:id="@+id/buttons_container"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp">

        <Button
            android:id="@+id/edit_details_cancel_button"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/edit_details_save_button"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:text="@string/save" />

    </LinearLayout>

    <!--scrollview : container for main content-->
    <ScrollView
        android:layout_above="@id/buttons_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <!--gridlayout with two columns-->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:columnCount="2"
            android:useDefaultMargins="false">

            <!--infos header-->
            <TextView
                android:layout_columnSpan="2"
                style="@style/header"
                android:text="@string/account_infos_header" />

            <View
                style="@style/Divider"
                android:layout_columnSpan="2"
                android:layout_marginBottom="3dp" />

            <!--name-->
            <TextView
                style="@style/details_label"
                android:text="@string/account_name_txt" />

            <EditText
                android:id="@+id/details_name"
                style="@style/details_edit_value"
                android:text="sdlfkjsj" />

            <!--pseudo-->
            <TextView
                style="@style/details_label"
                android:text="@string/account_pseudo_txt" />

            <EditText
                android:id="@+id/details_pseudo"
                style="@style/details_edit_value"
                android:text="sdlfkjsj" />

            <!--email-->
            <TextView
                style="@style/details_label"
                android:text="@string/account_email_txt" />

            <EditText
                android:id="@+id/details_email"
                style="@style/details_edit_value"
                android:inputType="text|textEmailAddress"
                android:text="sdlfkjsj" />

            <!--password-->
            <TextView
                style="@style/details_label"
                android:text="@string/account_password_txt" />

            <EditText
                style="@style/details_edit_value"
                android:id="@+id/details_password"
                android:inputType="text|textVisiblePassword" />

            <!--show password-->
            <CheckBox
                style="@style/details_font"
                android:id="@+id/details_show_password"
                android:layout_columnSpan="2"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/account_show_passwd_txt"

                />

            <!--notes header-->
            <TextView
                style="@style/header"
                android:layout_columnSpan="2"
                android:text="@string/account_notes_txt" />

            <View
                style="@style/Divider"
                android:layout_columnSpan="2" />


            <!--notes field-->
            <EditText
                android:layout_columnSpan="2"
                android:id="@+id/details_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/details_font"
                android:layout_marginTop="6dp"
                android:padding="5dp" />

        </GridLayout>

    </ScrollView>


</RelativeLayout>